# django-lms

./: Dockerfile  Makefile  README.md  pyproject.toml
lms/: settings.py  urls.py
