[tool.poetry]
name = "lms"
version = "0.1.0"
description = ""
authors = ["Luiz Paulo Coutinho <coutinholps@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
isort = "^5.12.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
